[package]
name = "open-kioku-plan"
version.workspace = true
edition.workspace = true
description = "Planning primitives for Open Kioku coding workflows."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
open-kioku-context = { version = "1.0.4", path = "../open-kioku-context" }
open-kioku-core = { version = "1.0.4", path = "../open-kioku-core" }
open-kioku-errors = { version = "1.0.4", path = "../open-kioku-errors" }
open-kioku-format = { version = "1.0.4", path = "../open-kioku-format" }
open-kioku-impact = { version = "1.0.4", path = "../open-kioku-impact" }
open-kioku-storage = { version = "1.0.4", path = "../open-kioku-storage" }
open-kioku-tests = { version = "1.0.4", path = "../open-kioku-tests" }
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
open-kioku-storage-sqlite = { version = "1.0.4", path = "../open-kioku-storage-sqlite" }
