[package]
name = "open-kioku-qdrant"
version.workspace = true
edition.workspace = true
description = "Qdrant vector store integration for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-errors = { version = "1.0.1", path = "../open-kioku-errors" }

