[package]
name = "open-kioku-ranking"
version.workspace = true
edition.workspace = true
description = "Ranking and scoring utilities for Open Kioku results."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
open-kioku-core = { version = "1.0.4", path = "../open-kioku-core" }

[dev-dependencies]
chrono.workspace = true
