[package]
name = "open-kioku-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
open-kioku-actions = { path = "../open-kioku-actions" }
open-kioku-config = { path = "../open-kioku-config" }
open-kioku-errors = { path = "../open-kioku-errors" }
serde.workspace = true
tokio.workspace = true

