[package]
name = "open-kioku-scip"
version.workspace = true
edition.workspace = true
description = "SCIP occurrence import and mapping for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-config = { version = "1.0.1", path = "../open-kioku-config" }
open-kioku-core = { version = "1.0.1", path = "../open-kioku-core" }
open-kioku-errors = { version = "1.0.1", path = "../open-kioku-errors" }
protobuf = "3.7"
scip = "0.5.2"
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
