[package]
name = "open-kioku-search-regex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { path = "../open-kioku-core" }
open-kioku-errors = { path = "../open-kioku-errors" }
open-kioku-evidence = { version = "0.1.0", path = "../open-kioku-evidence" }
open-kioku-storage = { path = "../open-kioku-storage" }
regex.workspace = true

