[package]
name = "open-kioku-search-regex"
version.workspace = true
edition.workspace = true
description = "Regex search implementation for Open Kioku."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
open-kioku-core = { version = "1.0.4", path = "../open-kioku-core" }
open-kioku-errors = { version = "1.0.4", path = "../open-kioku-errors" }
open-kioku-evidence = { version = "1.0.4", path = "../open-kioku-evidence" }
open-kioku-storage = { version = "1.0.4", path = "../open-kioku-storage" }
regex.workspace = true
